# Console-Game

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  Creature.cpp  Creature.hpp  README.md  WORKSPACE  assets.txt  assets2.txt  build.sh  fix.sh  game.cpp  game.hpp  lint.sh  main.cpp  menu.hpp  run.sh
Debug/: .gdb_history  CMakeCache.txt  ConsoleGame  Makefile  cmake_install.cmake
Release/: CMakeCache.txt  ConsoleGame  Makefile  cmake_install.cmake
Release/Debug/: .gdb_history  CMakeCache.txt  ConsoleGame  Makefile  assets.txt  cmake_install.cmake
include/: assets.h  clip.h  config.h  creature.h  event.h  event_system.h  game.h  input.h  menu.h  player.h  utils.h  window.h
include/actor/: actor.h  player.h
proto/: player_controls.proto
src/: assets.cc  assets.h  clip.cc  config.cc  config.h  creature.cc  event_system.cc  game.cc  game.h  input.cc  main.cc  menu.cc  menu.h  player.cc  window.cc
src/actor/: actor.cc  player.cc
