load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_import")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")


cmake(
    name = "sfml",
    lib_source = "@sfml//:all_srcs",
    out_shared_libs = [
        "libsfml-system.2.6.1.dylib",
        "libsfml-system.2.6.dylib",
        "libsfml-system.dylib",
        "libsfml-window.2.6.1.dylib",
        "libsfml-window.2.6.dylib",
        "libsfml-window.dylib",
    ],
)

cc_library(
    name = "ascii-combat-lib",
    srcs = [
        "src/player.cc",
        "src/game.cc",
        "src/menu.cc",
        "src/assets.cc",
        "src/window.cc",
        "src/clip.cc",
        "src/input.cc",
    ],
    hdrs = [
        "include/player.h",
        "include/game.h",
        "include/menu.h",
        "include/assets.h",
        "include/window.h",
        "include/clip.h",
        "include/config.h",
        "include/input.h",
    ],
    strip_include_prefix = "include",
    deps = [":sfml"]
)

cc_binary(
    name = "ascii-combat",
    srcs = ["src/main.cc"],
    deps = [":ascii-combat-lib"],
    linkopts = ["-lcurses"],
)