load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_import")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")


cmake(
    name = "sfml",
    lib_source = "@sfml//:all_srcs",
    out_shared_libs = [
        "libsfml-system.2.6.1.dylib",
        "libsfml-system.2.6.dylib",
        "libsfml-system.dylib",
        "libsfml-window.2.6.1.dylib",
        "libsfml-window.2.6.dylib",
        "libsfml-window.dylib",
    ],
)

cc_binary(
    name = "ascii-combat",
    srcs = glob(["src/*.cc"]) + glob(["src/*.h"]),
    deps = [":sfml"],
    linkopts = ["-lcurses"],
)